# hgwrr

./: DESCRIPTION  MD5  NAMESPACE  NEWS.md  configure  configure.ac
R/: RcppExports.R  hetero.R  hgwr.R  hgwrr-package.R  make.dummy.R  make_dummy.R  parse.formula.R  parse_formula.R  utils.R
data/: datalist  mulsam.test.rda  multisampling.large.rda  multisampling.rda  wuhan.hp.rda
inst/doc/: hgwrr.R  hgwrr.Rmd  hgwrr.html
man/: coef.hgwrm.Rd  fitted.hgwrm.Rd  hgwr.Rd  hgwrr-package.Rd  logLik.hgwrm.Rd  make.dummy.Rd  make_dummy.Rd  matrix2char.Rd  mulsam.test.Rd  multisampling.Rd  multisampling.large.Rd  parse.formula.Rd  print.hgwrm.Rd  print.shgt.Rd  print.spahetbootres.Rd  print.summary.hgwrm.Rd  print.table.md.Rd  print_table_md.Rd  residuals.hgwrm.Rd  spatial_hetero_test.Rd  spatial_hetero_test_data.Rd  summary.hgwrm.Rd  wuhan.hp.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  hetero_test.cpp  hgwr.cpp  hlmgwr.cpp  hlmgwr.h  progress.hpp  utils.h
src/libhgwr/include/: armadillo_config.h  hlmgwr.h
src/libhgwr/src/: CMakeLists.txt  hlmgwr.cpp
src/libhgwr/src/cli/: CMakeLists.txt  main.cpp
tests/: testthat.R
tests/others/: multisampling_large.R  only_random_intercept.R  wuhan_hp.R
tests/testthat/: test-hetero.R  test-hgwr.R  test-make.dummy.R
vignettes/: hgwrr.Rmd
